Rename artifacts. Change logging library to log4j2. Remove use of system output. Migrate to Java 9 and refactoring