@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nextbreakpoint.shop</groupId>
-    <artifactId>com.nextbreakpoint.shop.parent</artifactId>
+    <artifactId>com.nextbreakpoint.shop</artifactId>
     <version>1.0.0</version>
     <modules>
         <module>mysql</module>
@@ -31,32 +31,59 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <try.version>2.0.3</try.version>
         <junit4.version>4.12</junit4.version>
-        <junit5jupiter.version>5.0.0-M5</junit5jupiter.version>
-        <junit5platform.version>1.0.0-M5</junit5platform.version>
+        <junit5jupiter.version>5.0.2</junit5jupiter.version>
+        <junit5platform.version>1.0.2</junit5platform.version>
         <mockito.version>1.9.5</mockito.version>
         <assertj.version>3.6.2</assertj.version>
-        <vertx.version>3.4.1</vertx.version>
+        <vertx.version>3.5.0</vertx.version>
         <slf4j.version>1.7.25</slf4j.version>
         <restassured.version>2.4.0</restassured.version>
         <hamcrest.version>1.3</hamcrest.version>
         <restito.version>0.9.1</restito.version>
         <dropwizard.version>3.1.0</dropwizard.version>
+        <log4j2.version>2.10.0</log4j2.version>
         <hsqldb.version>2.4.0</hsqldb.version>
         <mysqlconnector.version>8.0.7-dmr</mysqlconnector.version>
         <liquibase.version>3.5.3</liquibase.version>
         <nf.version>2.0.1</nf.version>
         <stub.host>docker.for.mac.localhost</stub.host>
-        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
-        <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-        <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>2.20.1</maven-failsafe-plugin.version>
+        <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
+        <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
+        <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
+        <java.version>9</java.version>
+        <maven.source.release>1.9</maven.source.release>
+        <maven.target.release>1.9</maven.target.release>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+        <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
     </properties>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>${maven-toolchains-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>[1.9,)</version>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -90,8 +117,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.bind</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -99,6 +128,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>--add-modules java.xml.bind</argLine>
                     <parallel>both</parallel>
                     <threadCount>5</threadCount>
                 </configuration>
@@ -115,6 +145,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <argLine>--add-modules java.xml.bind</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -129,11 +162,23 @@
                 <groupId>com.nextbreakpoint.nextfractal</groupId>
                 <artifactId>com.nextbreakpoint.nextfractal.core</artifactId>
                 <version>${nf.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.nextbreakpoint.nextfractal</groupId>
                 <artifactId>com.nextbreakpoint.nextfractal.mandelbrot</artifactId>
                 <version>${nf.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hsqldb</groupId>
@@ -151,6 +196,11 @@
                 <version>${liquibase.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.mattbertolini</groupId>
+                <artifactId>liquibase-slf4j</artifactId>
+                <version>${liquibase-slf4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>${slf4j.version}</version>
@@ -159,6 +209,21 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-1.2-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.vertx</groupId>
@@ -265,4 +330,28 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
